FEAT: CRUD de usuarios y envío de credenciales al registrar un usuario por medio de correo
EndPoints de prueba
POST: Crear un usuario  http://localhost:3000/api/v1/usuarios
{
  "nombre": "María",
  "apellido_p": "García",
  "apellido_m": "López",
  "correo": "maria.garcia@example.com",
  "telefono": "555-111-2222",
  "usuario": "mgarcia",
  "roles": ["Contador"]
}

Actualizar
PUT /api/v1/usuarios/2
{ "telefono": "555-999-8888", "roles": ["Contador","Auditor"] }

Eliminar
DELETE /api/v1/usuarios/2

Reactivar
PATCH /api/v1/usuarios/2/reactivar

--- a/.env
+++ b/.env
@@ -27,3 +27,10 @@ ADMIN_CORREO=admin@koreacc.local
 ADMIN_TELEFONO=5555555555
 ADMIN_USUARIO=admin
 ADMIN_CONTRASENA=Admin*123
+
+# Correo saliente
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=devleninbg@gmail.com
+SMTP_PASS=oynlxltruwuytdbj 
+SMTP_FROM="Koreacc System <devleninbg@gmail.com>"
