FEAT: Enpoints para generación de reportes financieros

--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ NODE_ENV=development
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=koreacc
-DB_USER=postgres
-DB_PASS=Dani123
+DB_USER=lenin
+DB_PASS=lenin
 
 
 # JWT
