--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ NODE_ENV=development
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=koreacc
-DB_USER=postgres
-DB_PASS=Dani123
+DB_USER=
+DB_PASS=
 
 
 # JWT
@@ -15,7 +15,7 @@ JWT_SECRET=koreacc_secret_key_updated_16092025
 JWT_EXPIRES_IN=8h
 JWT_ISS=backend-koreacc
 
-# Seguridad (opcional)
+# Seguridad 
 CORS_ORIGIN=http://localhost:4200
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX=100
