--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ NODE_ENV=development
 # Base de datos
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=koreacc
-DB_USER=
-DB_PASS=
+DB_NAME=appdb
+DB_USER=appuser
+DB_PASS=apppass
 
 
 # JWT
