[fix]rm info .env cnf

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ JWT_EXPIRES_IN=8h
 JWT_ISS=backend-koreacc
 
 # Seguridad 
-CORS_ORIGIN=http://localhost:4200
+CORS_ORIGIN=origin
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX=100
 
@@ -26,15 +26,15 @@ ADMIN_APELLIDO_P=Sistema
 ADMIN_APELLIDO_M=Root
 ADMIN_CORREO=admin@koreacc.local
 ADMIN_TELEFONO=5555555555
-ADMIN_USUARIO=admin
-ADMIN_CONTRASENA=Admin*123
+ADMIN_USUARIO=user_default
+ADMIN_CONTRASENA=pass_user
 
 # Correo saliente
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=devleninbg@gmail.com
-SMTP_PASS=oynlxltruwuytdbj 
+SMTP_USER=smtpuse
+SMTP_PASS=smtppass 
 SMTP_FROM="Koreacc System <devleninbg@gmail.com>"
 
 # reCAPTCHA V2
-RECAPTCHA_SECRET=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+RECAPTCHA_SECRET=rechapcha
